# osp.tools.fonzie

./: CMakeLists.txt  README  universelse.sh
cmake/modules/: FindFontforge.cmake  FindGPhoto2.cmake  FindPODOFO.cmake  FindSVNClient.cmake  FindSerial.cmake
potrace/: CMakeLists.txt  decompose.c  potracelib.c  potracelib.h
src/: CMakeLists.txt  bookscanner.cpp  bookscanner.h  composer.cpp  composer.h  document.cpp  document.h  ff_wrapper.c  ff_wrapper.h  fontupdate.cpp  fontupdate.h  glyphtrace.cpp  glyphtrace.h  gridspec.cpp  gridspec.h  magicmetrics.cpp  magicmetrics.h  main.cpp  names.h  nancyui.cpp  nancyui.h  ocr.cpp  ocr.h  options.cpp  options.h  orm.cpp  orm.h  potrace_util.h  scanimage.cpp  scanimage.h  ufotemplate.cpp  ufotemplate.h
